--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,14 @@
+<% flash.each do |type, msg| %>
+  <div class="alert alert-success">
+    <%= msg %>
+  </div>
+<% end %>
+
+
 <h1 class="text-center" >Gossip Page</h1>
+<div class="container text-center">
+  <button type="button" class="btn btn-link"><%= link_to 'Create Gossip', new_gossip_path %></button>
+</div>
 <div class="container text-center">
   <div class="row row-cols-4">
     <% Gossip.all.each do |gossip|%>
