--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,23 +1,32 @@
 
-<% flash.each do |type, msg| %>
-  <div class="alert alert-warning">
-    <%= msg %>
-  </div>
-<% end %>
+<% if flash.any? %>
 
-
-
-
-<%= form_tag url_for(action: 'create'), method: 'post' do %>
-
-  <%= label_tag 'Title' %>
-  <%= text_field_tag 'title', 'title' %>
-  <br /> <br />
-
-  <%= label_tag 'Content' %>
-  <%= text_area_tag 'content', 'content' %>
-  <br /> <br />
-
-  <%= submit_tag 'Create Gossip' %>
+  <% flash.each do |type, msg| %>
+    <div class="alert alert-warning">
+      <%= msg %>
+    </div>
+  <% end %>
 
 <% end %>
+
+
+<h1>Form</h1>
+
+
+<div>
+  <%= form_tag url_for(action: 'create'), method: 'post' do %>
+
+    <%= label_tag 'Title' %>
+    <br />
+    <%= text_field_tag 'title', 'title' %>
+    <br /> <br />
+
+    <%= label_tag 'Content' %>
+    <br />
+    <%= text_area_tag 'content', 'content' %>
+    <br /> <br />
+
+    <%= submit_tag 'Create Gossip' %>
+
+  <% end %>
+</div>
