--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -5,4 +5,5 @@
   <h5>By: <%= link_to "#{@gossip.user.first_name}", user_path(@gossip.user.id) %></h5>
   <h5>From: <%= link_to "#{@gossip.user.city.name}", city_path(@gossip.user.city.id) %></h5>
   <p><%= @gossip.content %></p>
+  <%= link_to 'Edit', edit_gossip_path(@gossip.id) %>
 </div>
