--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,12 +1,9 @@
-
 <% if flash.any? %>
-
   <% flash.each do |type, msg| %>
-    <div class="alert alert-warning">
+    <div class="alert alert-warning" data-turbo-permanent>
       <%= msg %>
     </div>
   <% end %>
-
 <% end %>
 
 
@@ -14,11 +11,12 @@
 
 
 <div>
-  <%= form_tag url_for(action: 'create'), method: 'post' do %>
+<%= form_tag url_for(action: 'create'),
+             method: 'post' do %>
 
     <%= label_tag 'Title' %>
     <br />
-    <%= text_field_tag 'title', 'title' %>
+    <%= text_field_tag 'title', @gossip.title || 'title' %>
     <br /> <br />
 
     <%= label_tag 'Content' %>
