--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application"%>
-    <%= javascript_include_tag "application", defer: true %>
+    <%= javascript_include_tag "application", defer: true, 'data-turbo-track': 'reload' %>
   </head>
 
   <body>
