--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -19,6 +19,7 @@
           <h5 class="card-title"><%= gossip.title %></h5>
           <p class="card-text"><%= link_to 'See more', gossip_path(gossip.id) %></p>
           <p class="card-text">Comments: <%= Comment.where(gossip_id: gossip.id).all.count%></p>
+          <p class="card-text">Tags: <%= TagOfGossip.where(gossip_id: gossip.id).all.count%></p>
         </div>
       </div>
 
