--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -12,10 +12,25 @@
   <h5>By: <%= link_to "#{@gossip.user.first_name}", user_path(@gossip.user.id) %></h5>
   <h5>From: <%= link_to "#{@gossip.user.city.name}", city_path(@gossip.user.city.id) %></h5>
   <p><%= @gossip.content %></p>
+  <br />
+<div class="tags container">
+  <h3>Tags</h3>
+  <%= @tags.each do |tag|%>
+  <div class="card mb-3 mr-3" style="max-width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-text"><%= tag %></h5>
+    </div>
+  </div>
+
+  <% end %>
+</div>
+
+<br />
   <%= link_to 'Edit', edit_gossip_path(@gossip.id) %>
   </br>
   <%= link_to 'Destroy', gossip_path(@gossip.id), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
 </div>
+
 
 <div class="comments">
 <h1>Comment</h1>
