--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,9 @@
             <%= link_to 'Home', root_path, class: "nav-item nav-link" %>
             <%= link_to 'Team', team_path, class: "nav-item nav-link" %>
             <%= link_to 'Contacts', contacts_path, class: "nav-item nav-link" %>
+            <%= link_to "Log in", new_session_path, class:"badge badge-primary" %>
+            <%= link_to "Log out", session_path(session.id), method: :delete %>
+
           </div>
         </div>
     </nav>
