--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-
+<% require_relative '../../helpers/sessions_helper' %>
 
 <!DOCTYPE html>
 <html>
@@ -29,8 +29,30 @@
             <%= link_to 'Home', root_path, class: "nav-item nav-link" %>
             <%= link_to 'Team', team_path, class: "nav-item nav-link" %>
             <%= link_to 'Contacts', contacts_path, class: "nav-item nav-link" %>
-            <%= link_to "Log in", new_session_path, class:"badge badge-primary" %>
-            <%= link_to "Log out", session_path(session.id), method: :delete %>
+            <% if current_user %>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  User options
+                </a>
+                <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
+                  <%= link_to "My profile", user_path(session[:user_id]), class:"badge badge-primary dropdown-item" %>
+                  <%= link_to "Log out", session_path(session.id), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}, class:"badge badge-danger dropdown-item" %>
+                </div>
+              </li>
+
+            <% else %>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                User options
+              </a>
+              <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
+                <%= link_to "Log in", new_session_path, class:"badge badge-primary dropdown-item" %>
+                <%= link_to "Register", new_user_path, class:"badge badge-secondary dropdown-item" %>
+              </div>
+            </li>
+
+            <% end %>
+
 
           </div>
         </div>
